wanted to save code

--- a/favorites.html
+++ b/favorites.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Lobster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Lobster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/favorites.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Pokedex</title>
   </head>
   <body>
-    <h1>Favorites</h1>
+    <div class="app">
+      <header>
+        <div class="header__logo-div">
+          <h1><a href="index.html">Pokedex</a></h1>
+        </div>
+        <div class="header__favorites-div">
+          <p>
+            <a id="favorites-link">Favorites</a>
+          </p>
+        </div>
+      </header>
+      <section>
+        <div class="container">
+          <ol id="pokedex">
+            <!-- Card will be placed here -->
+          </ol>
+        </div>
+      </section>
+      <footer></footer>
+    </div>
+
+    <script src="favorites.js"></script>
   </body>
 </html>
