search functionality added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="app">
       <header>
         <div class="header__logo-div">
-          <h1>Pokedex</h1>
+          <h1><a href="index.html">Pokedex</a></h1>
         </div>
         <div class="header__search-div">
           <input
